--- a/Front End/Exercice maquette CSS/index.html
+++ b/Front End/Exercice maquette CSS/index.html
@@ -17,22 +17,20 @@
     <div class="card_container">
         <div><img src="https://placehold.co/70"></div>
         <div><h2>Realisation A</h2></div>
-        <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio eius explicabo labore libero nesciunt non praesentium voluptatibus? Delectus ex maiores molestias qui ratione totam! Et necessitatibus porro possimus temporibus ut.
-        </p></div>
-        <span><button>+ d'infos</button></span>
+        <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio eius explicabo labore libero nesciunt non praesentium voluptatibus? Delectus ex maiores molestias qui ratione totam! Et necessitatibus porro possimus temporibus ut.<button>+ d'infos</button></p></div>
+
     </div>
     <div class="card_container">
         <div><img src="https://placehold.co/70"></div>
         <div><h2>Realisation B</h2></div>
         <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio eius explicabo labore libero nesciunt non praesentium voluptatibus? Delectus ex maiores molestias qui ratione totam! Et necessitatibus porro possimus temporibus ut.
-        </p></div>
-        <span><button>+ d'infos</button></span>
+            <button>+ d'infos</button></p></div>
+
     </div>
     <div class="card_container">
         <div><img src="https://placehold.co/500"></div>
-        <div><h2>Realisation C</h2></div>
+        <div><h2>Realisation C</h2></div><button>+ d'infos</button>
     </div>
-        <span><button>+ d'infos</button></span>
     </div>
     </section>
 </main>
