--- a/Front End/Test Boostrap/index.html
+++ b/Front End/Test Boostrap/index.html
@@ -2,15 +2,49 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Yoyoyo</title>
+    <title>Cours Bootstrap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
 </head>
 <body>
 <h1>Cours MNS</h1>
+
+<div class="container text-center">
+    <h2 class="text-start margin-bottom:10 border-bottom border-black">MEILLEURS MOMENTS</h2>
+    <div class="row row-cols-1 row-cols-md-3">
+        <div class="col">
+            <div class="position-relative">
+            <img class="img-fluid"
+                 src="https://img.olympics.com/images/image/private/t_16-9_1280/f_auto/primary/tzldo8u7jbpourykcg0e">
+                <i class="bi bi-play-btn-fill text-white fs-3 position-absolute bottom-0 end-0 me-2 "></i></div>
+            <p class="text-start fs-6 bg-warning-subtle d-inline-block ju">Natation</p>
+            <h3 class="text-start fw-bold fs-5">Finale 400m 4 nages (H) | Natation | Jeux Olympiques de Paris 2024</h3>
+
+        </div>
+        <div class="col">
+            <div class="position-relative">
+            <img class="img-fluid"
+                 src="https://img.olympics.com/images/image/private/t_16-9_640/f_auto/primary/d3ncsidshouremktuxhv">
+                <i class="bi bi-play-btn-fill text-white fs-3 position-absolute bottom-0 end-0 me-2"></i></div>
+            <p class="text-start fs-6">Judo</p>
+            <h3 class="text-start fw-bold fs-5">Finales par équipe mixte | Judo | Jeux Olympiques de Paris 2024</h3>
+        </div>
+        <div class="col">
+            <div class="position-relative">
+            <img class="img-fluid"
+                 src="https://img.olympics.com/images/image/private/t_16-9_640/f_auto/primary/lv4iupx4rdmakaeg2apv">
+                <i class="bi bi-play-btn-fill text-white fs-3 position-absolute bottom-0 end-0 me-2"></i></div>
+            <p class="text-start fs-6">Triathlon</p>
+            <h3 class="text-start fw-bold fs-5">Triathlon (F) | Jeux Olympiques de Paris 2024</h3>
+        </div>
+
+    </div>
+</div>
 
 </body>
 </html>
