add bootstrap exercices

--- a/Front End/Exercice Bootstrap/index.html
+++ b/Front End/Exercice Bootstrap/index.html
@@ -12,50 +12,49 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container-fluid">
-    <div class="row align-items-start g-1em">
-        <div class="col-lg-8 col-md-6 col-sm-12">
-            <img class="img-fluid" src="https://picsum.photos/1800/600">
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 border border-black">
-            <div class="align-middle">
-                <h2 class="text-center">COURS DE DINGUO</h2>
-                <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci
-                    est,
-                    fugit itaque laboriosam
-                    nostrum voluptatibus. Laborum nemo nisi, officiis qui quos similique temporibus? Architecto delectus
-                    ipsa
-                    minima tenetur vel!</p>
-            </div>
+<div class="container-fluid mt-5">
+    <div class="row g-2 mb-2">
+        <img class="col-lg-8 col-md-6 col-sm-12 img-fluid object-fit-cover"
+             src="https://picsum.photos/1800/600">
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <h2 class="text-center">COURS DE DINGUO</h2>
+            <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium
+                adipisci
+                est,
+                fugit itaque laboriosam
+                nostrum voluptatibus. Laborum nemo nisi, officiis qui quos similique temporibus? Architecto delectus
+                ipsa
+                minima tenetur vel!</p>
         </div>
     </div>
 </div>
-<div class="container-fluid mb-2em">
-    <div class="row align-items-start g-1em lg-sm-0.5em">
-        <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="align-middle">
-                <h2 class="text-center">DINGUO DE COURS</h2>
-                <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci
-                    est,
-                    fugit itaque laboriosam
-                    nostrum voluptatibus. Laborum nemo nisi, officiis qui quos similique temporibus? Architecto delectus
-                    ipsa
-                    minima tenetur vel!</p>
-            </div>
+<div class="container-fluid">
+    <div class="row g-2 mb-2">
+        <img class="col-lg-8 col-md-6 col-sm-12 order-lg-2 order-md-2 order-sm-1 img-fluid object-fit-cover"
+             src="https://picsum.photos/1900/600">
+        <div class="col-lg-4 col-md-6 col-sm-12 order-md-1 order-sm-2">
+            <h2 class="text-center">DINGUO DE COURS</h2>
+            <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci
+                est,
+                fugit itaque laboriosam
+                nostrum voluptatibus. Laborum nemo nisi, officiis qui quos similique temporibus? Architecto delectus
+                ipsa
+                minima tenetur vel!</p>
         </div>
-        <div class="col-lg-8 col-md-6 col-sm-12">
-            <img class="img-fluid object-fit-cover" src="https://picsum.photos/1800/600">
-        </div>
+
     </div>
 </div>
 
-<div class="container-fluid mb-2em">
-    <div class="row align-items-start g-4 g-sm-2">
-        <div class="col-lg-3 col-md-6 col-sm-12"><img class="object-fit-cover" src="https://picsum.photos/600/600"></div>
-        <div class="col-lg-3 col-md-6 col-sm-12"><img class="object-fit-cover" src="https://picsum.photos/600/600"></div>
-        <div class="w-100 d-none d-md-block"></div>
-        <div class="col-lg-3 col-md-6 col-sm-12"><img class="object-fit-cover" src="https://picsum.photos/600/600"></div>
-        <div class="col-lg-3 col-md-6 col-sm-12"><img class="object-fit-cover" src="https://picsum.photos/600/600"></div>
+<div class="container-fluid mt-lg-24 mt-md-3 mt-sm-2">
+    <div class="row g-lg-3 g-md-0 g-sm-2">
+        <div class="col-lg-3 col-md-6 col-sm-12"><img class="object-fit-cover img-fluid"
+                                                      src="https://picsum.photos/800/1600"></div>
+        <div class="col-lg-3 col-md-6 col-sm-12"><img class="object-fit-cover img-fluid"
+                                                      src="https://picsum.photos/800/1601"></div>
+        <div class="col-lg-3 col-md-6 col-sm-12"><img class="object-fit-cover img-fluid"
+                                                      src="https://picsum.photos/800/1602"></div>
+        <div class="col-lg-3 col-md-6 col-sm-12"><img class="object-fit-cover img-fluid"
+                                                      src="https://picsum.photos/800/1603"></div>
 
     </div>
 </div>
