--- a/Front End/Exercice Bootstrap/index.html
+++ b/Front End/Exercice Bootstrap/index.html
@@ -16,7 +16,7 @@
     <div class="row g-2 mb-2">
         <img class="col-lg-8 col-md-6 col-sm-12 img-fluid object-fit-cover"
              src="https://picsum.photos/1800/600">
-        <div class="col-lg-4 col-md-6 col-sm-12">
+        <div class="col-lg-4 col-md-6 col-sm-12 align-content-center">
             <h2 class="text-center">COURS DE DINGUO</h2>
             <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium
                 adipisci
@@ -32,7 +32,7 @@
     <div class="row g-2 mb-2">
         <img class="col-lg-8 col-md-6 col-sm-12 order-lg-2 order-md-2 order-sm-1 img-fluid object-fit-cover"
              src="https://picsum.photos/1900/600">
-        <div class="col-lg-4 col-md-6 col-sm-12 order-md-1 order-sm-2">
+        <div class="col-lg-4 col-md-6 col-sm-12 order-md-1 order-sm-2 align-content-center">
             <h2 class="text-center">DINGUO DE COURS</h2>
             <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci
                 est,
