--- a/Front End/Javascript/index.html
+++ b/Front End/Javascript/index.html
@@ -1,38 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
-    <title>Cours MNS</title>
-    <style>
-        .test {
-            color: red;
-        }
-    </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <script defer src="script.js"></script>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
-
 <body>
-<h1 id="le-titre-principal">Mon super site !</h1>
-
-<article>
-<h2>Cours MNS</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aspernatur deserunt ducimus, expedita hic id, itaque
-    iure laudantium libero magni modi, nesciunt numquam rem ut veritatis. Aperiam enim fuga id?</p>
-<h2>Cours MNS</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aspernatur deserunt ducimus, expedita hic id, itaque
-    iure laudantium libero magni modi, nesciunt numquam rem ut veritatis. Aperiam enim fuga id?</p>
-<h2>Cours MNS</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aspernatur deserunt ducimus, expedita hic id, itaque
-    iure laudantium libero magni modi, nesciunt numquam rem ut veritatis. Aperiam enim fuga id?</p>
-<h2>Cours MNS</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aspernatur deserunt ducimus, expedita hic id, itaque
-    iure laudantium libero magni modi, nesciunt numquam rem ut veritatis. Aperiam enim fuga id?</p>
-</article>
-
-
+    <div id="scene">
+        <div id="barre"></div>
+        <img id="balle" src="balle.png" />
+    </div>
 </body>
+
 </html>
-
-
-<script src="script.js"></script>
