add evaluation rendue

--- a/Front End/Evaluation/index.html
+++ b/Front End/Evaluation/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script defer src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-          rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 
     <title>Evaluation Monteragioni</title>
 
@@ -20,143 +21,151 @@
 
 <body>
 
-<header class="container mt-lg-5 mt-2 headerIcons">
-    <nav class="d-flex justify-content-between align-items-center">
-        <div class="">
-            <img class="img-fluid" src="./assets/francklegoat%20(moinspetit).png" alt="FranckLeGoat" title="FranckLeGoat">
-        </div>
+    <header class="container mt-lg-5 mt-2 headerIcons">
+        <nav class="d-flex justify-content-between align-items-center">
+            <div class="">
+                <img class="img-fluid" src="./assets/francklegoat%20(moinspetit).png" alt="FranckLeGoat"
+                    title="FranckLeGoat">
+            </div>
 
-        <div>
-            <form class="form-inline my-2 my-lg-0 d-flex">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <i class='bx bx-search-alt'></i>
-            </form>
-        </div>
-        <div class="d-flex align-items-center gap-3 ">
-            <div class=""><i class='bx bx-basket'></i></div>
-            <div class=""><i class='bx bx-user-circle'></i></div>
-        </div>
-    </nav>
-</header>
+            <div>
+                <form class="form-inline my-2 my-lg-0 d-flex">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <i class='bx bx-search-alt'></i>
+                </form>
+            </div>
+            <div class="d-flex align-items-center gap-3 ">
+                <div class=""><i class='bx bx-basket'></i></div>
+                <div class=""><i class='bx bx-user-circle'></i></div>
+            </div>
+        </nav>
+    </header>
 
-<section class="container mt-lg-5 d-flex">
-    <div class="row g-lg-5 g-1 ">
+    <section class="container mt-lg-5 d-flex">
+        <div class="row g-lg-5 g-1 ">
 
-        <div class="col-sm-12 col-lg-6">
-            <div class="border border-dark container_article px-5 pb-1 h-100">
-                <h1 class="text-start">Article 1</h1>
-                <div class="row fourimg">
-                    <img class="img-fluid col-6 p-1 " src="https://placehold.co/400">
-                    <img class="img-fluid col-6 p-1 " src="https://placehold.co/400">
-                    <img class="img-fluid col-6 p-1 " src="https://placehold.co/400">
-                    <img class="img-fluid col-6 p-1 " src="https://placehold.co/400">
+            <div class="col-sm-12 col-lg-6">
+                <div class="border border-dark container_article px-5 pb-1 h-100">
+                    <h1 class="text-start">Article 1</h1>
+                    <div class="row fourimg">
+                        <img class="img-fluid col-6 p-1 " src="https://placehold.co/400">
+                        <img class="img-fluid col-6 p-1 " src="https://placehold.co/400">
+                        <img class="img-fluid col-6 p-1 " src="https://placehold.co/400">
+                        <img class="img-fluid col-6 p-1 " src="https://placehold.co/400">
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="col-12 col-lg-6">
-            <div class="border border-dark px-5 pb-1 h-100 container_article">
-                <h1 class="text-start">Article 2</h1>
-                <div class="col justify-content-center"><img class="img-fluid" src="https://placehold.co/800"></div>
-            </div>
-        </div>
-
-        <div class="col-12 col-lg-6 position-relative rupture">
-            <div class="border border-dark px-5 pb-4 h-100 container_article">
-                <h1 class="text-start">Article 3</h1>
-                <div class="col justify-content-center"><img class="img-fluid" src="https://placehold.co/800"></div>
+            <div class="col-12 col-lg-6">
+                <div class="border border-dark px-5 pb-1 h-100 container_article">
+                    <h1 class="text-start">Article 2</h1>
+                    <div class="col justify-content-center"><img class="img-fluid" src="https://placehold.co/800"></div>
+                </div>
             </div>
 
-        </div>
+            <div class="col-12 col-lg-6 position-relative rupture">
+                <div class="border border-dark px-5 pb-4 h-100 container_article">
+                    <h1 class="text-start">Article 3</h1>
+                    <div class="col justify-content-center"><img class="img-fluid" src="https://placehold.co/800"></div>
+                </div>
 
-        <div class="col-12 col-lg-6 position-relative solde">
-            <div class="border border-dark px-5 pb-4 h-100 container_article">
-                <h1 class="text-start">Article 4</h1>
-                <div class="col justify-content-center"><img class="img-fluid" src="https://placehold.co/800"></div>
             </div>
 
-        </div>
+            <div class="col-12 col-lg-6 position-relative solde">
+                <div class="border border-dark px-5 pb-4 h-100 container_article">
+                    <h1 class="text-start">Article 4</h1>
+                    <div class="col justify-content-center"><img class="img-fluid" src="https://placehold.co/800"></div>
+                </div>
 
-    </div>
-</section>
-<div class="container mt-5">
-    <section class="row">
-        <div class="col-12 col-lg-8 table-responsive-lg">
-            <table class="table table-hover table-bordered align-middle text-center h-100">
-                <tr>
-                    <th colspan="4" class="justify-content-center fst-italic fw-normal">Modèles disponibles</th>
-                </tr>
+            </div>
 
-                <tr>
-                    <th rowspan="4" class="fw-normal w-25">Tout les prix sont affichés hors taxes</th>
-                    <th class="w-25">Modèle</th>
-                    <th class="w-25">Prix</th>
-                    <th class="w-25">Online</th>
-                </tr>
-                <tr>
-                    <td>A</td>
-                    <td>10€</td>
-                    <td>oui</td>
-                </tr>
-                <tr>
-                    <td>B</td>
-                    <td>20€</td>
-                    <td>non</td>
-                </tr>
-                <tr>
-                    <td>C</td>
-                    <td colspan="2">En rupture</td>
-                </tr>
-
-            </table>
-        </div>
-        <div class="d-none d-lg-block col-lg-4 border border-dark pt-2">
-            <p class="text-center magasins">Liste des magasins physiques</p>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item d-flex justify-content-center align-items-center">Ville A</li>
-                <li class="list-group-item d-flex justify-content-center align-items-center">Ville B</li>
-                <li class="list-group-item d-flex justify-content-center align-items-center">Ville C</li>
-                <li class="list-group-item d-flex justify-content-center align-items-center">Ville D</li>
-                <li class="list-group-item d-flex justify-content-center align-items-center">Ville E</li>
-                <li class="list-group-item d-flex justify-content-center align-items-center">Ville F</li>
-                <li class="list-group-item d-flex justify-content-center align-items-center">Ville G</li>
-            </ul>
         </div>
     </section>
-</div>
+    <div class="container mt-5">
+        <section class="row">
+            <div class="col-12 col-lg-8 table-responsive-lg">
+                <table class="table table-hover table-bordered align-middle text-center h-100">
+                    <tr>
+                        <th colspan="4" class="justify-content-center fst-italic fw-normal">Modèles disponibles</th>
+                    </tr>
 
-#Je n'ai pas réussi a mettre les shrink et grow via bootstrap...Pas de chance.
-<footer class="mt-5 mb-5 w-100">
-    <div class=" d-flex justify-content-around align-items-stretch">
-        <div class=" p-0 flex-shrink-1 w-100">
-            <div class="m-2 border border-dark text-center h-100">
-                <h2>FAQ</h2>
-                <p class="mb-0">Première question</p>
-                <p class="mb-0">Seconde question</p>
-                <p class="mb-0">Troisième question</p>
-            </div>
+                    <tr>
+                        <th rowspan="4" class="fw-normal w-25">Tout les prix sont affichés hors taxes</th>
+                        <th class="w-25">Modèle</th>
+                        <th class="w-25">Prix</th>
+                        <th class="w-25">Online</th>
+                    </tr>
+                    <tr>
+                        <td>A</td>
+                        <td>10€</td>
+                        <td>oui</td>
+                    </tr>
+                    <tr>
+                        <td>B</td>
+                        <td>20€</td>
+                        <td>non</td>
+                    </tr>
+                    <tr>
+                        <td>C</td>
+                        <td colspan="2">En rupture</td>
+                    </tr>
 
-        </div>
-        <div class=" p-0 container-fluid flex-shrink-2 w-100">
-            <div class="m-2 border border-dark text-center h-100">
-                <a href="https://live.staticflickr.com/65535/51819793214_e3b34a586e_b.jpg"><p>Conditions générales de
-                    vente</p></a>
-                <a href="https://www.legifrance.gouv.fr/codes/texte_lc/LEGITEXT000006071154/"><p>Vos informations
-                    personnelles</p></a>
-                <a href="https://st.depositphotos.com/2370557/3583/i/450/depositphotos_35834951-stock-photo-chocolate-cookies-on-white-linen.jpg">
-                    <p>Cookies</p></a>
+                </table>
             </div>
-        </div>
-        <div class=" p-0 container-fluid flex-grow-0 w-100">
-            <div class="m-2 border border-dark d-flex justify-content-around align-items-center align-content-center text-center socialIcons h-100">
-                <a href="https://x.com/_ronare/status/1181982672240939015"><i class='bx bxl-twitter'></i></a>
-                <a href="https://www.facebook.com/fetedelasaucisse"><i class='bx bxl-facebook-square'></i></a>
-                <a href="https://www.instagram.com/p/C--EFrCCnXB/"><i class='bx bxl-instagram'></i></a>
+            <div class="d-none d-lg-block col-lg-4 border border-dark pt-2">
+                <p class="text-center magasins">Liste des magasins physiques</p>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item d-flex justify-content-center align-items-center">Ville A</li>
+                    <li class="list-group-item d-flex justify-content-center align-items-center">Ville B</li>
+                    <li class="list-group-item d-flex justify-content-center align-items-center">Ville C</li>
+                    <li class="list-group-item d-flex justify-content-center align-items-center">Ville D</li>
+                    <li class="list-group-item d-flex justify-content-center align-items-center">Ville E</li>
+                    <li class="list-group-item d-flex justify-content-center align-items-center">Ville F</li>
+                    <li class="list-group-item d-flex justify-content-center align-items-center">Ville G</li>
+                </ul>
             </div>
-
-        </div>
+        </section>
     </div>
-</footer>
+
+    #Je n'ai pas réussi a mettre les shrink et grow via bootstrap...Pas de chance.
+    <footer class="mt-5 mb-5 w-100">
+        <div class=" d-flex justify-content-around align-items-stretch">
+            <div class=" p-0 flex-shrink-1 w-100">
+                <div class="m-2 border border-dark text-center h-100">
+                    <h2>FAQ</h2>
+                    <p class="mb-0">Première question</p>
+                    <p class="mb-0">Seconde question</p>
+                    <p class="mb-0">Troisième question</p>
+                </div>
+
+            </div>
+            <div class=" p-0 container-fluid flex-shrink-2 w-100">
+                <div class="m-2 border border-dark text-center h-100">
+                    <a href="https://live.staticflickr.com/65535/51819793214_e3b34a586e_b.jpg">
+                        <p>Conditions générales de
+                            vente</p>
+                    </a>
+                    <a href="https://www.legifrance.gouv.fr/codes/texte_lc/LEGITEXT000006071154/">
+                        <p>Vos informations
+                            personnelles</p>
+                    </a>
+                    <a
+                        href="https://st.depositphotos.com/2370557/3583/i/450/depositphotos_35834951-stock-photo-chocolate-cookies-on-white-linen.jpg">
+                        <p>Cookies</p>
+                    </a>
+                </div>
+            </div>
+            <div class=" p-0 container-fluid flex-grow-0 w-100">
+                <div
+                    class="m-2 border border-dark d-flex justify-content-around align-items-center align-content-center text-center socialIcons h-100">
+                    <a href="https://x.com/_ronare/status/1181982672240939015"><i class='bx bxl-twitter'></i></a>
+                    <a href="https://www.facebook.com/fetedelasaucisse"><i class='bx bxl-facebook-square'></i></a>
+                    <a href="https://www.instagram.com/p/C--EFrCCnXB/"><i class='bx bxl-instagram'></i></a>
+                </div>
+
+            </div>
+        </div>
+    </footer>
 
 </body>
 
